--- a/WebContent/Users/UserProfile.html
+++ b/WebContent/Users/UserProfile.html
@@ -49,7 +49,7 @@
             </div>
             <div class="col-sm-6">
             <h4 style="color:#00b1b1;">{{oneuser.username}} </h4></span>
-              <span><p>ChatUs.Com</p></span>            
+              <span><p>UniteUp.Com</p></span>            
             </div>
             <div class="clearfix"></div>
             <hr style="margin:5px 0 5px 0;">
