--- a/WebContent/Forum/viewforum.html
+++ b/WebContent/Forum/viewforum.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,8 +31,8 @@
 			<button type="submit" class="btn btn-primary ">Save Forum</button>
 			</div></div> -->
 	
-	</div>
-	</form>
+	<!-- </div> -->
+	</form></div>
 	
 	<div class="container" style="padding-top:10px">
 	<div class="row">
@@ -56,7 +57,7 @@
 	<hr>
 	<button data-ng-show="forum.userid==globals.currentUser.username" data-ng-click="editforum(forum.id,forum.name,forum.topic,forum.description)" class="btn btn-success">Edit</button>
 	<button data-ng-show="forum.userid==globals.currentUser.username" data-ng-click="deleteforum(forum.id)" class="btn btn-primary btn-danger">Delete</button>
-	 <a href="#login"><button align="right" class="btn btn-primary" data-ng-click="like(blog.id)">Login To Comment This Forum</button> </a>
+<!-- 	 <a href="#login"><button align="right" class="btn btn-primary" data-ng-click="like(blog.id)">Login To Comment This Forum</button> </a> -->
 	</div>
 	</div></div></div></div></div>
 </body>
