--- a/WebContent/Chat/chat.html
+++ b/WebContent/Chat/chat.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Chat Page</title>
-<!-- <script type="text/javascript" src="chatController.js"></script>
-<script type="text/javascript" src="chatService.js"></script> -->
+<script type="text/javascript" src="chatController.js"></script>
+<script type="text/javascript" src="chatService.js"></script>
 </head>
 <body data-ng-app="myApp">
 <div data-ng-controller="chatController">
