--- a/WebContent/Forum/viewforum.html
+++ b/WebContent/Forum/viewforum.html
@@ -1,39 +1,18 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="ISO-8859-1">
 <title>View Forum Page</title>
+<script type="text/javascript" src="Forum/forumctrl.js"></script>
+</head>
 <body data-ng-app="myApp">
 
 <div class="container">
 <form role="form" data-ng-submit="submit()" class="form-horizontal"
 		 action="" data-ng-controller="forumctrl">
 		  <h2> View Forums</h2>
-		  <!-- <div class="form-group">
-                    <label for="title" class="col-sm-3 control-label">Name</label>
-                    <div class="col-sm-9">
-		<input type="text" data-ng-model="name" class="form-control" autofocus>
-		</div></div>
-		  <div class="form-group">
-                    <label for="title" class="col-sm-3 control-label">Topic</label>
-                    <div class="col-sm-9">
-		 <input type="text" data-ng-model="topic" class="form-control" autofocus> <br>
-		</div></div>	
-
-				  <div class="form-group">
-                    <label for="title" class="col-sm-3 control-label">Description</label>
-                    <div class="col-sm-9">
-		<textarea draggable="false" rows="13" data-ng-model="description" class="form-control" autofocus></textarea>
-		</div></div>
-		 <div class="form-group">
-                    <div class="col-sm-9 col-sm-offset-3">
-			<button type="submit" class="btn btn-primary ">Save Forum</button>
-			</div></div> -->
-	
-	<!-- </div> -->
-	</form></div>
-	
+	</form>
+	</div>
 	<div class="container" style="padding-top:10px">
 	<div class="row">
         <div class="col-md-4 col-md-offset-3">
@@ -57,7 +36,7 @@
 	<hr>
 	<button data-ng-show="forum.userid==globals.currentUser.username" data-ng-click="editforum(forum.id,forum.name,forum.topic,forum.description)" class="btn btn-success">Edit</button>
 	<button data-ng-show="forum.userid==globals.currentUser.username" data-ng-click="deleteforum(forum.id)" class="btn btn-primary btn-danger">Delete</button>
-<!-- 	 <a href="#login"><button align="right" class="btn btn-primary" data-ng-click="like(blog.id)">Login To Comment This Forum</button> </a> -->
+	<!--  <a href="#login"><button align="right" class="btn btn-primary" data-ng-click="like(blog.id)">Login To Comment This Forum</button> </a> -->
 	</div>
 	</div></div></div></div></div>
 </body>
