--- a/WebContent/Job/jobslist.html
+++ b/WebContent/Job/jobslist.html
@@ -32,7 +32,7 @@
         		<h3 class="text-info">{{job.jobdetails}}</h3>  </div>
 <div class="span3">
         
-        		<h3 class="text-info">{{job.jobdetails}}</h3></div>
+        		<h3 class="text-info">{{job.lastdate}}</h3></div>
 </div></div></div></div></div></div>
 
 
